--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">TW Search Client</string>
+    <string name="hint">Enter Text</string>
+    <string name="search">search</string>
+    <string name="failed_api_response">Unable to fetch your data, check you internet</string>
+    <string name="loading_data">Loading...</string>
 </resources>
